--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,22 +8,20 @@ license = {text = "MIT"}
 authors = [
     {name = "Mohit Nagaraj", email = "mohitnagaraj20@gmail.com"}
 ]
-dependencies = []
-
-[project.optional-dependencies]
-sdk = [
+dependencies = [
+    # SDK dependencies
     "httpx>=0.27",
     "pydantic>=2.5",
     "pyyaml>=6.0",
-]
-api = [
+    # API dependencies
     "fastapi>=0.109",
     "sqlalchemy[asyncio]>=2.0",
     "asyncpg>=0.29",
     "aiosqlite>=0.20",
-    "pyyaml>=6.0",
     "uvicorn>=0.27",
 ]
+
+[project.optional-dependencies]
 dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
@@ -31,7 +29,6 @@ dev = [
     "mypy>=1.8",
     "ruff>=0.2",
 ]
-all = ["xray[sdk,api,dev]"]
 
 [build-system]
 requires = ["hatchling"]
