--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,19 +9,21 @@ authors = [
     {name = "Mohit Nagaraj", email = "mohitnagaraj20@gmail.com"}
 ]
 dependencies = [
-    # SDK dependencies
-    "httpx>=0.27",
-    "pydantic>=2.5",
     "pyyaml>=6.0",
-    # API dependencies
+    "pydantic>=2.5",
+]
+
+[project.optional-dependencies]
+sdk = [
+    "httpx>=0.27",
+]
+api = [
     "fastapi>=0.109",
     "sqlalchemy[asyncio]>=2.0",
     "asyncpg>=0.29",
     "aiosqlite>=0.20",
     "uvicorn>=0.27",
 ]
-
-[project.optional-dependencies]
 dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.23",
@@ -29,6 +31,7 @@ dev = [
     "mypy>=1.8",
     "ruff>=0.2",
 ]
+all = ["xray[sdk,api,dev]"]
 
 [build-system]
 requires = ["hatchling"]
