feat(api): add API key authentication support
- Introduced XRAY_API_KEY environment variable for optional API key authentication.
- Updated API routes to require authentication via the verify_api_key dependency.
- Enhanced configuration loading to support API key from environment variables.
- Updated documentation in docker-compose and example config files to reflect new authentication feature.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,10 @@ services:
       - "8000:8000"
     environment:
       XRAY_DATABASE_URL: postgresql+asyncpg://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
+
+      # Optional: Enable API key authentication
+      # Uncomment the line below to require authentication for all endpoints
+      # XRAY_API_KEY: "your-secret-api-key-change-me"
     depends_on:
       postgres:
         condition: service_healthy
