feat: add health endpoint and product-categorization example
- Add /health endpoint to API for container health checks
- Update README with quick start using published packages
- Add product-categorization example demonstrating published Docker image and PyPI package
- Update pyproject.toml to version 0.1.1 with starlette dependency fix
- Rename package to xray-logger for PyPI publishing
- Update Dockerfile for GHCR publishing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "xray"
-version = "0.1.0"
-description = "X-Ray SDK & API - Decision-reasoning observability for multi-step pipelines"
+name = "xray-logger"
+version = "0.1.1"
+description = "Decision-level observability for ML/LLM pipelines"
 readme = "README.md"
 requires-python = ">=3.12"
 license = {text = "MIT"}
@@ -16,6 +16,7 @@ dependencies = [
 [project.optional-dependencies]
 sdk = [
     "httpx>=0.27",
+    "starlette>=0.27",
 ]
 api = [
     "fastapi>=0.109",
@@ -31,7 +32,7 @@ dev = [
     "mypy>=1.8",
     "ruff>=0.2",
 ]
-all = ["xray[sdk,api,dev]"]
+all = ["xray-logger[sdk,api,dev]"]
 
 [build-system]
 requires = ["hatchling"]
