feat: add production docker-compose with published GHCR image
- docker-compose.yml: Production version using ghcr.io/mohit-nagaraj/xray-logger:latest
- docker-compose.dev.yml: Development version building from source
- Update README with docker-compose quick start (PostgreSQL recommended)
- Add restart policy and default env values for easier setup
- Users can now run with just: curl -O docker-compose.yml && docker-compose up -d

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -16,7 +16,7 @@ services:
       retries: 5
 
   xray-api:
-    image: ghcr.io/mohit-nagaraj/xray-logger:latest
+    build: .
     ports:
       - "8000:8000"
     environment:
@@ -28,7 +28,6 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    restart: unless-stopped
 
 volumes:
   xray_data:
